sshd: Fix path to sshd_config

--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -4,6 +4,6 @@
     - name: Configure sshd
       copy:
         src: sshd_config
-        dest: /etc/sshd_config
+        dest: /etc/ssh/sshd_config
         mode: 0400
       notify: "restart ssh"
