pyenv: Configure pyenv for bash

--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -49,3 +49,13 @@
         src: update_pyenv
         dest: /etc/cron.weekly/update_pyenv
         mode: 0700
+
+    - name: Configure bash for pyenv
+      blockinfile:
+        path: /home/{{ user }}/.bashrc
+        marker: "# {mark} Configuration for pyenv"
+        block: |
+          export PYENV_ROOT='{{ pyenv_install_dir }}'
+          export PATH="$PYENV_ROOT/bin:$PATH"
+          eval "$(pyenv init -)"
+          eval "$(pyenv virtualenv-init -)"
