--- a/roles/team-overview/tasks/main.yml
+++ b/roles/team-overview/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
-- name: Add user for creating the team-overview document
-  user:
-    name: "{{ team_overview_user }}"
-    shell: /bin/bash
+- tags: [team-overview]
+  block:
+    - name: Add user for creating the team-overview document
+      user:
+        name: "{{ team_overview_user }}"
+        shell: /bin/bash
 
-- name: Install pyenv
-  import_role: name=pyenv
-  vars:
-    user: "{{ team_overview_user }}"
+    - name: Install pyenv
+      import_role: name=pyenv
+      vars:
+        user: "{{ team_overview_user }}"
 
-- name: Install nginx
-  package: name=nginx state=present
+    - name: Install nginx
+      package: name=nginx state=present
