--- a/roles/team-overview/tasks/main.yml
+++ b/roles/team-overview/tasks/main.yml
@@ -11,5 +11,13 @@
       vars:
         user: "{{ team_overview_user }}"
 
+    - name: Create working directory
+      file:
+        path: "{{ working_directory }}"
+        state: directory
+        owner: "{{ team_overview_user }}"
+        group: "{{ team_overview_user }}"
+        mode: 0700
+
     - name: Install nginx
       package: name=nginx state=present
