--- a/roles/team-overview/vars/main.yml
+++ b/roles/team-overview/vars/main.yml
@@ -1,3 +1,4 @@
 ---
 team_overview_user: team-overview
 working_directory: /home/{{ team_overview_user }}/{{ team_overview_user }}
+repository: "{{ working_directory }}/repository"
