--- a/roles/team-overview/vars/main.yml
+++ b/roles/team-overview/vars/main.yml
@@ -1,4 +1,7 @@
 ---
 team_overview_user: team-overview
-working_directory: /home/{{ team_overview_user }}/{{ team_overview_user }}
-repository: "{{ working_directory }}/repository"
+team_overview_home: "/home/{{ team_overview_user }}"
+virtualenv_name: '{{ team_overview_user }}'
+base_directory: /home/{{ team_overview_user }}/{{ team_overview_user }}
+working_directory: "{{ base_directory }}/repository"
+repository: https://github.com/serlo-org/serlo-highrise-report.git
