--- a/roles/team-overview/vars/main.yml
+++ b/roles/team-overview/vars/main.yml
@@ -5,3 +5,4 @@ virtualenv_name: '{{ team_overview_user }}'
 base_directory: /home/{{ team_overview_user }}/{{ team_overview_user }}
 working_directory: "{{ base_directory }}/repository"
 repository: https://github.com/serlo-org/serlo-highrise-report.git
+target_directory: /www/data
