team-overview: Add webserver configuration

--- a/roles/team-overview/tasks/main.yml
+++ b/roles/team-overview/tasks/main.yml
@@ -41,3 +41,8 @@
         src: start_update_team_overview
         dest: /etc/cron.hourly/start_update_team_overview
         mode: 0500
+
+    - name: Configure team overview server
+      template:
+        src: team_overview.conf
+        dest: /etc/nginx/conf.d
