--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -4,6 +4,9 @@
     - name: Install nginx
       package: name=nginx state=present
 
+    - name: Remove configuration of default webserver
+      file: path=/etc/nginx/sites-enabled/default state=absent
+
     - name: Create web directory
       file:
         path: "{{ web_directory }}"
