team-overview: Configure website

--- a/roles/team-overview/tasks/main.yml
+++ b/roles/team-overview/tasks/main.yml
@@ -45,4 +45,5 @@
     - name: Configure team overview server
       template:
         src: team_overview.conf
-        dest: /etc/nginx/conf.d
+        dest: /etc/nginx/sites-enabled
+      notify: "restart webserver"
