webserver: Better variable names (#4)

--- a/roles/team-overview/meta/main.yml
+++ b/roles/team-overview/meta/main.yml
@@ -1,4 +1,5 @@
 ---
 dependencies:
   - role: webserver
-    web_directory: "{{ target_directory }}"
+    webserver:
+      directory: "{{ team_overview.target_directory }}"
