webserver: Add variables for user and group

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -11,7 +11,7 @@
       file:
         path: "{{ webserver.directory }}"
         state: directory
-        owner: www-data
-        group: www-data
+        owner: "{{ webserver_user }}"
+        group: "{{ webserver_group }}"
         mode: 0770
         recurse: true
