webserver: Rename variable for webserver directory

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -9,7 +9,7 @@
 
     - name: Create web directory
       file:
-        path: "{{ webserver.directory }}"
+        path: "{{ webserver_directory }}"
         state: directory
         owner: "{{ webserver_user }}"
         group: "{{ webserver_group }}"
