--- a/roles/team-overview/meta/main.yml
+++ b/roles/team-overview/meta/main.yml
@@ -1,5 +1,4 @@
 ---
 dependencies:
   - role: webserver
-    webserver:
-      directory: "{{ team_overview.target_directory }}"
+    webserver_directory: "{{ team_overview.target_directory }}"
