webserver: Add notifications for restarting server

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -3,9 +3,11 @@
   block:
     - name: Install nginx
       package: name=nginx state=present
+      notify: "restart webserver"
 
     - name: Remove configuration of default webserver
       file: path=/etc/nginx/sites-enabled/default state=absent
+      notify: "restart webserver"
 
     - name: Create web directory
       file:
