sshd: Shorten cmd for handler "restart sshd"

--- a/roles/sshd/handlers/main.yml
+++ b/roles/sshd/handlers/main.yml
@@ -1,6 +1,4 @@
 ---
 - name: Restart ssh
-  service:
-    name: ssh
-    state: reloaded
+  service: name=ssh state=reloaded
   listen: "restart ssh"
