sshd: Start service at the end

--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -7,3 +7,6 @@
         dest: /etc/ssh/sshd_config
         mode: 0400
       notify: "restart ssh"
+
+    - name: Start sshd
+      service: name=sshd state=started
