webserver: Change definition of "webserver_directory"

--- a/roles/team-overview/meta/main.yml
+++ b/roles/team-overview/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
   - role: webserver
-    webserver_directory: "{{ team_overview.target_directory }}"
+    webserver_name: overview.serlo.org
