webserver: Format tasks/main.yml

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -6,7 +6,9 @@
       notify: "restart webserver"
 
     - name: Remove configuration of default webserver
-      file: path={{ webserver_sites_enabled }}/default state=absent
+      file:
+        path: "{{ webserver_sites_enabled }}/default"
+        state: absent
       notify: "restart webserver"
 
     - name: Create directory for webserver configurations
