webserver: Enable SSL

--- a/roles/webserver/templates/nginx_server.conf
+++ b/roles/webserver/templates/nginx_server.conf
@@ -1,5 +1,9 @@
 server {
 	listen 80;
+	listen 443 ssl;
+
+	ssl_certificate "{{ webserver_ssl_certificate }}";
+	ssl_certificate_key "{{ webserver_ssl_privatekey }}";
 
 	root "{{ webserver_directory }}";
 
