webserver: Add HTTP to HTTPS redirection

--- a/roles/webserver/templates/nginx_server.conf
+++ b/roles/webserver/templates/nginx_server.conf
@@ -1,5 +1,16 @@
+# Redirect all requests from HTTP to HTTPS
 server {
 	listen 80;
+
+	server_name {{ webserver_name}};
+
+	return 301 https://{{ webserver_name }}$request_uri;
+
+	# Do not show nginx version
+	server_tokens off;
+}
+
+server {
 	listen 443 ssl;
 
 	ssl_certificate "{{ webserver_ssl_certificate }}";
