--- a/roles/webserver/templates/nginx_server.conf
+++ b/roles/webserver/templates/nginx_server.conf
@@ -22,5 +22,25 @@ server {
 
 	index index.html;
 
+	# Do not show nginx version
 	server_tokens off;
+
+	# Use SSL configurations recommended at the site
+	# https://michael.lustfield.net/nginx/getting-a-perfect-ssl-labs-score
+	ssl_protocols TLSv1.2;
+	ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+	ssl_prefer_server_ciphers on;
+	ssl_stapling on;
+	ssl_stapling_verify on;
+	ssl_session_cache shared:SSL:10m;
+	ssl_session_timeout 10m;
+	ssl_ecdh_curve secp384r1;
+
+	add_header Strict-Transport-Security "max-age=31536000";
+	add_header X-Frame-Options DENY;
+	add_header X-Content-Type-Options nosniff;
+
+	# Disable gzip because of the BREACH attack
+	# ( https://en.wikipedia.org/wiki/BREACH )
+	gzip off;
 }
