--- a/roles/webserver/templates/nginx_server.conf
+++ b/roles/webserver/templates/nginx_server.conf
@@ -43,4 +43,10 @@ server {
 	# Disable gzip because of the BREACH attack
 	# ( https://en.wikipedia.org/wiki/BREACH )
 	gzip off;
+
+	{% if webserver_passwd_file %}
+	# Configuration for bassic HTTP password authentication
+	auth_basic "{{ webserver_name }}";
+	auth_basic_user_file "{{ webserver_auth_basic_user_file }}";
+	{% endif %}
 }
